--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
- "name": "joint",
- "description": "Joint JS",
- "version": "0.4",
- "homepage": "http://www.jointjs.com/",
- "dojoBuild": "profile.build.js",
- "author": {
+  "name": "joint",
+  "version": "0.4",
+  "description": "Joint - JavaScript diagramming tool",
+  "homepage": "http://www.jointjs.com/",
+  "dojoBuild": "profile.build.js",
+  "author": {
    "name": "David Durman",
    "email": "daviddurman@seznam.cz"
- },
- "scripts": {
-
- },
- "devDependencies": {
- },
- "licenses": [
-   
- ]
+  },
+  "main": "JointAmd.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/novosit/joint.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/novosit/joint/issues"
+  },
+  "homepage": "https://github.com/novosit/joint#readme"
 }
